<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etActionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/action_name" />

        <EditText
            android:id="@+id/etActionType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/action_type"
            android:text="USSD" />

        <EditText
            android:id="@+id/etActionCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/action_code" />
    </LinearLayout>
</ScrollView>


